# Compilance_Assistance_Bot

./: .env  check_utils.py  debug_boe_extraction.py  debug_coo.py  debug_invoice_extractor.py  pyproject.toml  requirements.txt  run.py  run_test.py  settings.json  simple_invoice_xtractor  test_attempt_tracker.py  test_imports_fixed.py  test_workflow_flow.py
app/: __init__.py  main.py
app/components/: otp_input.py  summary_grid.py
app/conversation/: llm_manager.py  prompts.py  router.py
app/database/: models.py  postgres_client.py
app/document/: __init__.py  classifier.py  extractors.py  processor.py
app/session/: __init__.py  attempt_tracker.py  state_manager.py
app/storage/: __init__.py  local_storage.py
app/utils/: __init__.py  cache.py  context.py  error_handler.py  exceptions.py  logger.py  monitoring.py  security.py
app/validation/: engine.py  key_matcher.py  optimized_engine.py  smart_validator.py
app/workflow/: __init__.py  orchestrator.py  state_machine.py
tests/: test_cache.py
tests/test_conversation/: test_router.py
tests/test_validation/: test_cache_validation.py  test_engine.py
tests/test_workflow/: test_state_machine.py
